--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
   "license": "Apache License, 2.0",
   "private": false,
   "devDependencies": {
+    "flow": "^0.2.3",
     "parcel": "^1.12.4"
   },
   "dependencies": {
