--- a/web/package.json
+++ b/web/package.json
@@ -1,16 +1,34 @@
 {
-  "name": "OpenRiksdag",
+  "name": "web",
   "version": "0.1.0",
-  "description": "Visually explore Sweden's Riksdag",
-  "main": "index.js",
-  "repository": "git@github.com:openriksdag/openriksdag.git",
-  "author": "OpenRiksdag <https://github.com/openriksdag>",
-  "license": "Apache License, 2.0",
-  "private": false,
-  "devDependencies": {
-    "parcel": "^1.12.4"
-  },
+  "private": true,
   "dependencies": {
-    "d3": "^5.15.0"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.4.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
