--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
+    "react-virtualized": "^9.21.2",
     "redux": "^4.0.5"
   },
   "scripts": {
