--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
     "react-virtualized": "^9.21.2",
+    "react-router-dom": "^4.4.0-beta.8",
     "redux": "^4.0.5"
   },
   "scripts": {
