--- a/web/package.json
+++ b/web/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "classnames": "^2.2.6",
     "d3": "^5.15.0",
     "ramda": "^0.27.0",
     "react": "^16.12.0",
